--- a/certificates.html
+++ b/certificates.html
@@ -17,19 +17,19 @@
                     <i class="fa-brands fa-html5"></i>
                     <h2>HTML5</h2>
                     <p>There is my Master certificate in HTML5 and CSS3  || UDEMY </p>
-                    <a href="https://www.udemy.com/certificate/UC-85b75b9f-0969-4b6d-afe6-3d2d8da2a09a/">Visit</a>
+                    <a href="https://www.udemy.com/certificate/UC-85b75b9f-0969-4b6d-afe6-3d2d8da2a09a/">View</a>
                 </div>
                 <div>
                     <i class="fa-brands fa-css3-alt"></i>
                     <h2>CSS3</h2>
                     <p>There is my certificate of CSS3 and JAVASCRIPT   ||   UDEMY</p>
-                    <a href="https://www.udemy.com/certificate/UC-cbdf5c4a-e015-40fc-9a81-e2105bb08dac/">Visit</a>
+                    <a href="https://www.udemy.com/certificate/UC-cbdf5c4a-e015-40fc-9a81-e2105bb08dac/">View</a>
                 </div>
                 <div>
                     <i class="fa-brands fa-js"></i>
                     <h2>JAVA SCRIPT</h2>
                     <p>There is my certificate of JAVASCRIPT  ||  UDEMY </p>
-                    <a href="https://www.udemy.com/certificate/UC-8ee06b1e-b15b-4c0a-9174-350eace92e20/">Visit</a>
+                    <a href="https://www.udemy.com/certificate/UC-8ee06b1e-b15b-4c0a-9174-350eace92e20/">View</a>
                 </div>
                 
             </div>
